# python-value-objects

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: codeql.yml  mirror.yml  publish.yml  test.yml
docs/diagrams/: value_objects_class_diagram.txt
pyvalueobjects/: __init__.py
pyvalueobjects/abstract/: nullablevalueobject.py  valueobject.py
pyvalueobjects/dates/: isodate.py
pyvalueobjects/lists/: ArrayList.py  array_list.py  nullable_array_list.py
pyvalueobjects/numbers/: int.py  negative_int.py  negative_or_zero_int.py  nullable_int.py  nullable_negative_int.py  nullable_negative_or_zero_int.py  nullable_positive_int.py  nullable_positive_or_zero_int.py  positive_int.py  positive_or_zero_int.py
pyvalueobjects/security/: cpe.py  cve.py  cve_id.py  nullable_cpe.py  nullable_cve.py
pyvalueobjects/strings/: isodate.py  non_empty_string.py  nullable_non_empty_string.py  nullable_string.py  nullable_uuid4.py  string.py  uuid4.py
tests/dates/: isodate_test.py
tests/lists/: array_list_test.py  nullable_array_list_test.py
tests/numbers/: int_test.py  negative_int_test.py  negative_or_zero_int_test.py  nullable_int_test.py  nullable_negative_int_test.py  nullable_negative_or_zero_int_test.py  nullable_positive_int_test.py  nullable_positive_or_zero_int_test.py  positive_int_test.py  positive_or_zero_int_test.py
tests/security/: cpe.py  cpe_test.py  cve_id_test.py  cve_test.py  nullable_cpe_test.py  nullable_cve_test.py
tests/string/: string_test.py
tests/strings/: non_empty_string_test.py  (+5 more)
valueobjects/: __init__.py  value_object.py
(+18 files in other folders)
