[metadata]
name = pyvalueobjects
version = 0.11.0
author = Javier Parada
author_email = javierparadadev@gmail.com
description = A collection of Value Objects to save time by generalizing data type and format validations.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
url = https://github.com/jparadadev/python-value-objects
project_urls =
    Bug Tracker = https://github.com/jparadadev/python-value-objects/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    valueobjects
    values

[options.packages.find]
include = pyvalueobjects*

include_package_data = True
python_requires = >=3.7